GDHI-147 Update display flex to block to avoid text overlapping and data loss <Lahari/Shaswat>

--- a/src/components/countryProfile/country-profile.scss
+++ b/src/components/countryProfile/country-profile.scss
@@ -408,7 +408,7 @@
 //To print the appropriate content
 @media print {
   .category-accordion-content {
-    display: flex !important;
+    display: block !important;
     .indicator-details-container {
       width: 97%;
     }
